# opecv-simple-examples

ReadWriteImg/: CMakeLists.txt  main.cpp
VideoWebcam/: CMakeLists.txt  main.cpp
